# project-exploring-mlflow

./: .gitignore  README.md  logging-first-model.ipynb  pyproject.toml
mlruns/0/: meta.yaml
mlruns/888958100226118400/: meta.yaml
mlruns/888958100226118400/bfeeafec5e4745f3b07d739e51664762/: meta.yaml
mlruns/888958100226118400/bfeeafec5e4745f3b07d739e51664762/metrics/: mae  mse  r2  rmse
mlruns/888958100226118400/bfeeafec5e4745f3b07d739e51664762/tags/: mlflow.log-model.history
mlruns/966721593720526310/: meta.yaml
mlruns/966721593720526310/061312a4a93e4bcba5c5acb95d4fddce/: meta.yaml
mlruns/966721593720526310/061312a4a93e4bcba5c5acb95d4fddce/metrics/: mae  mse  r2  rmse
mlruns/966721593720526310/061312a4a93e4bcba5c5acb95d4fddce/tags/: mlflow.log-model.history
mlruns/966721593720526310/07bc3955ee3c499189e5059f37256b1e/: meta.yaml
mlruns/966721593720526310/07bc3955ee3c499189e5059f37256b1e/metrics/: mae  mse  r2  rmse
mlruns/966721593720526310/07bc3955ee3c499189e5059f37256b1e/tags/: mlflow.log-model.history
mlruns/966721593720526310/5d96134319ed453d84ad83ed098a68b3/: meta.yaml
mlruns/966721593720526310/5d96134319ed453d84ad83ed098a68b3/metrics/: mae  mse  r2  rmse
mlruns/966721593720526310/5d96134319ed453d84ad83ed098a68b3/tags/: mlflow.log-model.history
mlruns/966721593720526310/695378fe82b24f7ba66f7e27aba75028/: meta.yaml
mlruns/966721593720526310/695378fe82b24f7ba66f7e27aba75028/metrics/: mae  mse  r2  (+1 more)
mlruns/966721593720526310/a75590652b9c4ee0afc44732923ac07d/: meta.yaml
mlruns/966721593720526310/fa9c7cfd300f43a49b92b2e3e4590031/: meta.yaml
(+23 files in other folders)
