[tool.poetry]
name = "project-exploring-mlflow"
version = "0.1.0"
description = ""
authors = ["gmachin-stratio <gmachin@stratio.com>"]
readme = "README.md"
packages = [{include = "project_exploring_mlflow"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mlflow = "^2.8.0"
pprintpp = "^0.4.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"
numpy = "^1.26.1"
datetime = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
